--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="css/style.css">
   <style>
     body { padding: 20px; }
-    textarea, input[type=text], input[type=date] { width: 100%; padding: 10px; margin-bottom: 10px; }
+    textarea, input[type=text], input[type=date], input[type=file] {
+      width: 100%; padding: 10px; margin-bottom: 10px;
+    }
     button { padding: 10px 15px; font-weight: bold; }
     .section { margin-bottom: 30px; }
     .logout-section { text-align: center; margin-top: 40px; }
@@ -21,6 +23,7 @@
     <input id="event-title" type="text" placeholder="Event title">
     <input id="event-date" type="text" placeholder="Event date">
     <input id="event-img" type="text" placeholder="Image URL (optional)">
+    <input id="event-image-file" type="file" accept="image/*">
     <button onclick="addEvent()">Add Event</button>
   </div>
 
@@ -68,12 +71,13 @@
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js';
     import { getFirestore, collection, addDoc, deleteDoc, doc, query, where, getDocs } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-firestore.js';
     import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-auth.js';
+    import { getStorage, ref, uploadBytes, getDownloadURL } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-storage.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyApi6lVmv7PaXJc9pJW9BpaOVqTEccoWsQ",
       authDomain: "bucananchurchadmin.firebaseapp.com",
       projectId: "bucananchurchadmin",
-      storageBucket: "bucananchurchadmin.firebasestorage.app",
+      storageBucket: "bucananchurchadmin.appspot.com",
       messagingSenderId: "300936840591",
       appId: "1:300936840591:web:8d6946bfe6822fa83577fa",
       measurementId: "G-STS6Q128C9"
@@ -82,6 +86,7 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     const auth = getAuth(app);
+    const storage = getStorage(app);
 
     onAuthStateChanged(auth, user => {
       if (!user) {
@@ -99,7 +104,17 @@
     window.addEvent = async () => {
       const title = document.getElementById('event-title').value;
       const date = document.getElementById('event-date').value;
-      const img = document.getElementById('event-img').value;
+      const fileInput = document.getElementById('event-image-file');
+      const file = fileInput.files[0];
+      const urlField = document.getElementById('event-img').value;
+
+      let img = urlField;
+
+      if (file) {
+        const storageRef = ref(storage, `event-images/${Date.now()}-${file.name}`);
+        await uploadBytes(storageRef, file);
+        img = await getDownloadURL(storageRef);
+      }
 
       if (title && date) {
         await addDoc(collection(db, 'events'), { title, date, img });
@@ -168,3 +183,4 @@
   </script>
 </body>
 </html>
+
