--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -7,9 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <style>
     body { padding: 20px; }
-    textarea, input[type=text], input[type=date], input[type=file] {
-      width: 100%; padding: 10px; margin-bottom: 10px;
-    }
+    textarea, input[type=text], input[type=date], input[type=file] { width: 100%; padding: 10px; margin-bottom: 10px; }
     button { padding: 10px 15px; font-weight: bold; }
     .section { margin-bottom: 30px; }
     .logout-section { text-align: center; margin-top: 40px; }
@@ -22,8 +20,7 @@
     <h2>Add Upcoming Event</h2>
     <input id="event-title" type="text" placeholder="Event title">
     <input id="event-date" type="text" placeholder="Event date">
-    <input id="event-img" type="text" placeholder="Image URL (optional)">
-    <input id="event-image-file" type="file" accept="image/*">
+    <input id="event-img-file" type="file" accept="image/*">
     <button onclick="addEvent()">Add Event</button>
   </div>
 
@@ -104,19 +101,15 @@
     window.addEvent = async () => {
       const title = document.getElementById('event-title').value;
       const date = document.getElementById('event-date').value;
-      const fileInput = document.getElementById('event-image-file');
-      const file = fileInput.files[0];
-      const urlField = document.getElementById('event-img').value;
-
-      let img = urlField;
-
-      if (file) {
-        const storageRef = ref(storage, `event-images/${Date.now()}-${file.name}`);
-        await uploadBytes(storageRef, file);
-        img = await getDownloadURL(storageRef);
-      }
+      const file = document.getElementById('event-img-file').files[0];
 
       if (title && date) {
+        let img = "";
+        if (file) {
+          const imgRef = ref(storage, `events/${Date.now()}_${file.name}`);
+          await uploadBytes(imgRef, file);
+          img = await getDownloadURL(imgRef);
+        }
         await addDoc(collection(db, 'events'), { title, date, img });
         alert('Event added. Refresh homepage to see changes.');
       }
