--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <style>
     body { padding: 20px; }
-    textarea, input[type=text], input[type=date], input[type=file] { width: 100%; padding: 10px; margin-bottom: 10px; }
+    textarea, input[type=text], input[type=date] { width: 100%; padding: 10px; margin-bottom: 10px; }
     button { padding: 10px 15px; font-weight: bold; }
     .section { margin-bottom: 30px; }
     .logout-section { text-align: center; margin-top: 40px; }
@@ -20,7 +20,7 @@
     <h2>Add Upcoming Event</h2>
     <input id="event-title" type="text" placeholder="Event title">
     <input id="event-date" type="text" placeholder="Event date">
-    <input id="event-img-file" type="file" accept="image/*">
+    <input id="event-img" type="text" placeholder="Image URL (optional)">
     <button onclick="addEvent()">Add Event</button>
   </div>
 
@@ -68,13 +68,12 @@
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js';
     import { getFirestore, collection, addDoc, deleteDoc, doc, query, where, getDocs } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-firestore.js';
     import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-auth.js';
-    import { getStorage, ref, uploadBytes, getDownloadURL } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-storage.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyApi6lVmv7PaXJc9pJW9BpaOVqTEccoWsQ",
       authDomain: "bucananchurchadmin.firebaseapp.com",
       projectId: "bucananchurchadmin",
-      storageBucket: "bucananchurchadmin.appspot.com",
+      storageBucket: "bucananchurchadmin.firebasestorage.app",
       messagingSenderId: "300936840591",
       appId: "1:300936840591:web:8d6946bfe6822fa83577fa",
       measurementId: "G-STS6Q128C9"
@@ -83,7 +82,6 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     const auth = getAuth(app);
-    const storage = getStorage(app);
 
     onAuthStateChanged(auth, user => {
       if (!user) {
@@ -101,15 +99,9 @@
     window.addEvent = async () => {
       const title = document.getElementById('event-title').value;
       const date = document.getElementById('event-date').value;
-      const file = document.getElementById('event-img-file').files[0];
+      const img = document.getElementById('event-img').value;
 
       if (title && date) {
-        let img = "";
-        if (file) {
-          const imgRef = ref(storage, `events/${Date.now()}_${file.name}`);
-          await uploadBytes(imgRef, file);
-          img = await getDownloadURL(imgRef);
-        }
         await addDoc(collection(db, 'events'), { title, date, img });
         alert('Event added. Refresh homepage to see changes.');
       }
@@ -176,4 +168,3 @@
   </script>
 </body>
 </html>
-
